# FastDB

./: .gitignore  Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: auth.rs  index.rs  main.rs  models.rs  routes.rs  state.rs  storage.rs
