[workspace]
members = [
    "crates/server",
]

resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
